--- a/index.css
+++ b/index.css
@@ -1,4 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&family=Raleway:wght@400;500;700&display=swap");
+*/
 
 /**** Normalización de estilos ****/
 
