--- a/index.css
+++ b/index.css
@@ -1,21 +1,71 @@
 @import url("https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&family=Raleway:wght@400;500;700&display=swap");
-*/
 
 /**** Normalización de estilos ****/
 
-* {
+:root {
+  /***Paleta***/
+
+  --primary-solid: rgba(255, 51, 51, 1);
+  --primary-900: rgba(255, 51, 51, 0.9);
+  --primary-500: rgba(255, 51, 51, 0.5);
+  --primary-300: rgba(255, 51, 51, 0.3);
+
+  --secondary-solid: rgba(29, 132, 181, 1);
+  --secondary-900: rgba(29, 132, 181, 0.9);
+  --secondary-500: rgba(29, 132, 181, 0.5);
+  --secondary-300: rgba(29, 132, 181, 0.3);
+
+  --dark-solid: rgba(31, 31, 31, 1);
+  --dark-900: rgba(31, 31, 31, 0.9);
+  --dark-500: rgba(31, 31, 31, 0.5);
+  --dark-300: rgba(31, 31, 31, 0.3);
+
+  --dark-bg-solid: rgba(48, 52, 63, 1);
+  --light-bg-solid: rgba(255, 255, 255, 1);
+  --light-font-solid: #ffffff;
+
+  /*** Tipografía ***/
+
+  --base-font: "Inter", sans-serif;
+  --alternative-font: "Raleway", sans-serif;
+
+  /*** Tamaño de fuente ***/
+
+  --font-display: 46px;
+  --font-jumbo: 38px;
+  --font-xLarge: 30px;
+  --font-large: 24px;
+  --font-medium: 18px;
+  --font-small: 16px;
+  --font-xsmall: 14px;
+
+  /*** Espacios ***/
+
+  --spacing-128: 12.8rem;
+  --spacing-68: 6.8rem;
+  --spacing-36: 3.6rem;
+  --spacing-28: 2.8rem;
+  --spacing-16: 1.6rem;
+  --spacing-12: 1.2rem;
+  --spacing-8: 8rem;
+}
+
+*,
+*::before,
+*::after {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
 }
 
 html {
+  font-family: var(--alternative-font);
   font-size: 62.5%;
-  font-family: "Raleway", sans-serif;
+  color: var(--light-font-solid);
 }
 
 main {
-  background-color: #ffffff;
+  background-color: var(--light-bg-solid);
   max-width: 1440px;
   margin: 0 auto;
 }
@@ -24,7 +74,7 @@ a {
   text-decoration: none;
   font-size: 2em;
   font-weight: 500;
-  color: #ffffff;
+  color: var(--light-font-solid);
 }
 
 ul,
@@ -33,19 +83,20 @@ ol {
 }
 
 p {
-  font-size: 1.8em;
+  font-size: var(--font-medium);
   font-weight: 400;
 }
 
 header,
 footer {
-  background: #30343f;
+  background-color: var(--dark-bg-solid);
   max-width: 1440px;
   margin: 0 auto;
 }
 
 .titulo-seccion {
-  font-size: 4.6em;
+  color: var(--dark-bg-solid);
+  font-size: var(--font-display);
   font-weight: 700;
   text-transform: uppercase;
 }
@@ -73,13 +124,13 @@ header {
 .list-nav-header {
   display: flex;
   gap: 49px;
-  color: #fff;
+  color: var(--light-font-solid);
   font-weight: 500;
 }
 
 .select-nav-header {
-  background-color: #30343f;
-  color: #fff;
+  background-color: var(--dark-bg-solid);
+  color: var(--light-font-solid);
   font-size: 2em;
   border: none;
   font-weight: normal;
@@ -94,14 +145,13 @@ header {
   background-repeat: no-repeat;
   background-position: center -400px;
   background-size: cover;
-  color: #fff;
   display: flex;
   align-items: center;
   padding-left: 105px;
 }
 
 .titulo-nuevos-ingresos {
-  font-size: 3.8em;
+  font-size: var(--font-jumbo);
   font-weight: 700;
   margin-bottom: 7px;
 }
@@ -109,11 +159,9 @@ header {
 .link-shop {
   width: 211px;
   height: 47px;
-  background-color: #ffffff;
   border-radius: 50px;
   border: none;
-  color: #111;
-  font-family: "Inter", sans-serif;
+  font-family: var(--base-font);
   font-size: 2em;
   font-weight: 500;
   margin-top: 35px;
@@ -145,7 +193,8 @@ header {
 }
 
 .articulo-detalle-titulo {
-  font-size: 4.6em;
+  color: var(--dark-bg-solid);
+  font-size: var(--font-display);
   font-weight: 500;
   text-transform: uppercase;
 }
@@ -167,11 +216,11 @@ header {
   width: 291.809px;
   height: 65px;
   border-radius: 50px;
-  background: #30343f;
-  color: #fff;
-  font-size: 2.4em;
+  background: var(--dark-bg-solid);
+  color: var(--light-font-solid);
+  font-size: var(--font-large);
   font-weight: 500;
-  font-family: "Inter", sans-serif;
+  font-family: var(--base-font);
 }
 
 .cont-img-articulo {
@@ -211,16 +260,16 @@ header {
 .subtitulo-card-producto {
   width: 109.422px;
   color: var(--gray-1, #333);
-  font-family: Inter;
-  font-size: 14px;
+  font-family: var(--base-font);
+  font-size: var(--font-xsmall);
   font-weight: 500;
 }
 
 .titulo-card-producto {
   width: 267.93px;
-  color: #111;
-  font-family: Inter;
-  font-size: 18px;
+  color: var(--dark-bg-solid);
+  font-family: var(--base-font);
+  font-size: var(--font-medium);
   font-weight: 700;
   margin-top: 13px;
 }
@@ -228,16 +277,16 @@ header {
 .precio-card-producto {
   width: 141.123px;
   width: 88.969px;
-  color: #333;
-  font-family: Inter;
-  font-size: 16px;
+  color: var(--dark-bg-solid);
+  font-family: var(--base-font);
+  font-size: var(--font-small);
   font-weight: 400;
   margin-top: 13px;
 }
 
 .cuotas-card-producto {
-  color: #1d84b5;
-  font-family: Inter;
+  color: var(--secondary-solid);
+  font-family: var(--base-font);
   font-size: 12px;
   font-weight: 700;
   margin-top: 13px;
@@ -275,7 +324,6 @@ footer {
 
 .copy-footer {
   text-align: center;
-  color: #fff;
   font-size: 20px;
   font-weight: 500;
   margin-top: 56px;
