--- a/styles/shop.css
+++ b/styles/shop.css
@@ -15,6 +15,7 @@
 .aside-shop {
   width: 243.04px;
   height: 493.928px;
+  color: var(--dark-solid);
 }
 
 .form-filtros-shop {
@@ -34,7 +35,7 @@
   height: 44.285px;
   padding: 2px;
   border-radius: 6px;
-  border: 2px solid #30343f;
+  border: 2px solid var(--dark-bg-solid);
   color: #b9b9b9;
   font-family: Inter;
   font-size: 20px;
@@ -42,7 +43,7 @@
 }
 
 .input-filtros-shop:focus {
-  color: #212b36;
+  color: var(--dark-solid);
 }
 
 .input-filtros-shop::placeholder,
@@ -59,16 +60,17 @@
 }
 
 .label-precio-filtros-shop {
-  font-family: Inter;
-  font-size: 16px;
+  font-family: var(--base-font);
+  font-size: var(--font-small);
   font-weight: 500;
+  color: var(--dark-solid);
 }
 
 .input-precio-filtros-shop {
   width: 59.143px;
   height: 27.519px;
   border-radius: 6px;
-  border: 2px solid #30343f;
+  border: 2px solid var(--dark-bg-solid);
   margin: 0 10px;
   font-family: Inter;
   font-size: 20px;
@@ -82,12 +84,12 @@
   height: 24px;
   margin-left: 10px;
   border-radius: 6px;
-  border: 2px solid #30343f;
+  border: 2px solid var(--dark-bg-solid);
 }
 
 .label-checkbox-filtros-shop {
-  font-family: Inter;
-  font-size: 18px;
+  font-family: var(--base-font);
+  font-size: var(--font-medium);
   font-weight: 500;
 }
 
@@ -129,18 +131,18 @@
   height: 34px;
   border-radius: 4px;
   border: 1px solid #dfe3e8;
-  background: #fff;
+  background: var(--light-bg-solid);
   display: flex;
   flex-direction: column;
   justify-content: center;
-  color: var(--dark-grey-400, #212b36);
+  color: var(--dark-solid);
   text-align: center;
-  font-family: Inter;
-  font-size: 16px;
+  font-family: var(--base-font);
+  font-size: var(--font-small);
   font-weight: 700;
 }
 
 .item-lista-paginado:active {
-  border-color: #ff3333;
-  color: #ff3333;
+  border-color: var(--primary-solid);
+  color: var(--primary-solid);
 }
