--- a/index.css
+++ b/index.css
@@ -76,6 +76,11 @@ a {
   color: var(--light-font-solid);
 }
 
+button {
+  border: none;
+  background-color: #ffffff;
+}
+
 ul,
 ol {
   list-style-type: none;
@@ -84,6 +89,14 @@ ol {
 p {
   font-size: var(--font-medium);
   font-weight: 400;
+}
+
+.input::placeholder {
+  color: #b9b9b9;
+  font-family: Inter;
+  font-size: 20px;
+  font-weight: 500;
+  padding: 23px 10px;
 }
 
 header,
