--- a/styles/admin.css
+++ b/styles/admin.css
@@ -2,12 +2,72 @@
   display: flex;
   width: 590.88px;
   height: 44.28px;
+  margin-bottom: 37px;
   gap: 10px;
-  margin: 36px 0 37px 110px;
 }
 
 .input-buscar-producto {
   width: 529.7647094726562px;
   border-radius: 6px;
-  border: 2px solid var(--dark-solid);
+  border: 2px solid var(--dark-bg-solid);
+}
+
+.cont-titulo {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.cont-agregar-producto {
+  display: flex;
+  align-items: center;
+  gap: 22px;
+}
+
+.agregar {
+  font-size: 24px;
+  font-weight: 700;
+}
+
+.btn-agregar {
+  background-image: url(../assets/branding/mdi_plus-box.svg);
+  background-repeat: no-repeat;
+  height: 52px;
+  width: 52px;
+}
+
+.cont-titulos-grid {
+  display: grid;
+  grid-template-columns: 1fr 1fr 2fr 1fr 1fr;
+  font-size: var(--font-large);
+  font: 700;
+  margin: 24px 0 32px 0;
+}
+
+.cont-articulo {
+  display: grid;
+  grid-template-columns: 1fr 1fr 2fr 1fr 1fr;
+  font-size: var(--font-large);
+  font: 500;
+  margin: 15px 0;
+}
+
+.cont-btns {
+  display: flex;
+  justify-content: end;
+  gap: 42px;
+}
+
+.btn-editar {
+  background-image: url(../assets/icons/edit_pencil.svg);
+  background-repeat: no-repeat;
+  height: 32px;
+  width: 32px;
+}
+
+.btn-eliminar {
+  background-image: url(../assets/icons/delete_trash.svg);
+  background-repeat: no-repeat;
+  height: 32px;
+  width: 32px;
 }
