--- a/index.css
+++ b/index.css
@@ -136,6 +136,33 @@ footer {
 .body-home {
   margin: 0;
 }
+
+/*** Estilos compartidos para paginas del Administrador***/
+
+.form-label {
+  margin-right: 20px;
+}
+
+.form-input,
+.input-stock {
+  height: 22px;
+  border: none;
+  border-bottom: 2px solid var(--primary-solid);
+  font-size: 18px;
+  margin-bottom: 36px;
+  margin-right: 10px;
+}
+
+.btn-form {
+  width: 175px;
+  height: 44.33px;
+  background-color: var(--primary-solid);
+  color: var(--light-font-solid);
+  font-size: 14px;
+  font-weight: 600;
+  margin-right: 34px;
+}
+
 /**** Estilos header ****/
 
 header {
