--- a/styles/login-register.css
+++ b/styles/login-register.css
@@ -28,10 +28,12 @@
 .cont-submit {
   display: flex;
   align-items: center;
+  justify-content: center;
 }
 
 .btn-form {
   width: 108px;
+  height: 39px;
 }
 
 .recordarme {
