creo función en JS para cargar header y footer en todas las pages

--- a/components/header.html
+++ b/components/header.html
@@ -10,25 +10,25 @@
 
 <body>
     <header>
-        <picture><a href="/index.html">
-                <img src="../assets/branding/logo_light_horizontal.svg" alt="Logo Funkoshop" class="logo" />
-            </a></picture>
 
-        <nav class="nav-header">
-            <ul class="list-nav-header">
-                <li class="nav-header-item whit-submenu">
-                    <a href="" class="nav-header-link whit-icon">SHOP <iconify-icon
+        <nav class="navbar container">
+            <picture><a href="/index.html">
+                    <img src="../assets/branding/logo_light_horizontal.svg" alt="Logo Funkoshop" class="logo" />
+                </a></picture>
+            <ul class="navbar__menu">
+                <li class="navbar__item whit-submenu">
+                    <a href="" class="navbar-link whit-icon">SHOP <iconify-icon
                             icon="tabler:chevron-down"></iconify-icon></a>
                     <ul class="submenu">
-                        <li class="submenu-item"><a href=""> FUNKOS </a></li>
+                        <li class="submenu-item"><a href="../pages/shop.html"> FUNKOS </a></li>
                         <li class="submenu-item"><a href=""> REMERAS </a></li>
                         <li class="submenu-item"><a href=""> LLAVEROS </a></li>
                     </ul>
                 </li>
-                <li class="nav-header-item"><a class="nav-header-link" href="">CONTACTO</a></li>
-                <li class="nav-header-item"><a class="nav-header-link" href="./pages/login.html">LOGIN</a></li>
-                <li class="nav-header-item">
-                    <a class="nav-header-link-cart" href="./pages/carrito.html"><img src="./assets/icons/cart-icon.svg"
+                <li class="navbar__item"><a class="navbar-link" href="">CONTACTO</a></li>
+                <li class="navbar__item"><a class="navbar-link" href="../pages/login.html">LOGIN</a></li>
+                <li class="navbar__item">
+                    <a class="navbar__link-cart" href="../pages/carrito.html"><img src="../assets/icons/cart-icon.svg"
                             alt="Icono de carrito de compras" /> </a>
                 </li>
             </ul>
