--- a/components/footer.html
+++ b/components/footer.html
@@ -9,19 +9,15 @@
 </head>
 
 <body>
-    <footer>
-        <div class="cont-nav-footer">
-            <nav class="nav-footer">
-
-                <ul class="list-nav-footer">
-                    <li><a href="../pages/shop.html">SHOP</a></li>
-                    <li><a href="../pages/login.html">INGRESAR</a></li>
-                    <li><a href="">CONTACTO</a></li>
-                </ul>
-            </nav>
+    <footer class="footer">
+        <nav class="navbar container navbar--footer">
+            <ul class="navbar__menu--footer">
+                <li class="navbar__item"><a class="navbar-link" href="../pages/shop.html">SHOP</a></li>
+                <li class="navbar__item"><a class="navbar-link" href="../pages/login.html">INGRESAR</a></li>
+                <li class="navbar__item"><a class="navbar-link" href="">CONTACTO</a></li>
+            </ul>
             <img src="../assets/branding/isotype.svg" alt="logo-funkoshop" class="logo-funkoshop-footer" />
-        </div>
-
+        </nav>
         <p class="copy-footer">All rights reserved 2023 - Funkoshop &copy;</p>
     </footer>
 
