--- a/index.css
+++ b/index.css
@@ -344,15 +344,6 @@ header {
 }
 
 /**** Estilos sección Últimos lanzamientos ****/
-.seccion-ultimos-lanzamientos {
-  width: 1200px;
-  margin: 0 auto;
-}
-
-.lista-ultimos-lanzamientos {
-  display: flex;
-  justify-content: space-between;
-}
 
 .card-producto {
   width: 359.966px;
@@ -437,6 +428,20 @@ header {
   font-size: 12px;
   font-weight: 700;
   margin-top: 13px;
+}
+
+iconify-icon {
+  color: var(--dark-bg-solid);
+  font-size: var(--font-small);
+  font-weight: 700;
+}
+
+.glide__arrow--left {
+  left: 0;
+}
+
+.glide__arrow--right {
+  right: 0;
 }
 
 /**** Estilos Footer ****/
