--- a/styles/shop.css
+++ b/styles/shop.css
@@ -103,15 +103,15 @@
   gap: 8px;
 }
 
-.item-lista-paginado {
+.link-lista-paginado {
   width: 36px;
   height: 34px;
   border-radius: 4px;
   border: 1px solid #dfe3e8;
-  background: var(--light-bg-solid);
   display: flex;
   flex-direction: column;
   justify-content: center;
+  align-items: center;
   color: var(--dark-solid);
   text-align: center;
   font-family: var(--base-font);
@@ -119,7 +119,16 @@
   font-weight: 700;
 }
 
-.item-lista-paginado:active {
+.link-lista-paginado:active {
   border-color: var(--primary-solid);
   color: var(--primary-solid);
+}
+
+.link-prev {
+  background-color: gray;
+  color: #b9b9b9;
+}
+
+.link-next {
+  color: #b9b9b9;
 }
