--- a/views/pages/item.hbs
+++ b/views/pages/item.hbs
@@ -1,69 +1,49 @@
-<main class="main-home">
-  <section class="banner">
-    <article class="cont-nuevos-ingresos">
-
-      <h3 class="titulo-nuevos-ingresos">Nuevos Ingresos</h3>
-      <p>Descubrí el próximo Funko Pop de tu colección</p>
-      <button
-        class="link-shop"
-        onclick="window.location.href='./pages/shop.html'"
-      >SHOP</button>
-    </article>
-  </section>
-  <section class="container seccion-colecciones">
-
-    <article class="articulo-seccion-colecciones">
-      <div class="articulo-detalle">
-        <h3 class="articulo-detalle-titulo">STAR WARS & THE MANDALORIAN
-        </h3>
-        <p class="articulo-detalle-descripcion">Disfruta de una saga que sigue
-          agregando personajes a su colección.</p>
-        <button class="btn-ver-coleccion">VER COLECCIÓN</button>
-
-      </div>
-      <picture class="cont-img-articulo"><img
-          src="./assets/star-wars/baby-yoda-1.webp"
+<main>
+  <section class="container section-item">
+    <article class="card-product">
+      <picture class="card-product__cover-img">
+        <img
+          src="../assets/star-wars/baby-yoda-1.webp"
           alt="Baby Yoda"
-          class="img-articulo"
+          class="card-item__img--front"
+        />
+        <img
+          src="../assets/star-wars/baby-yoda-box.webp"
+          alt="Baby Yoda"
+          class="card-item__img--back"
         />
       </picture>
-    </article>
-
-    <article class="articulo-seccion-colecciones">
-      <picture class="cont-img-articulo"><img
-          src="./assets/pokemon/vulpix-1.webp"
-          alt="Vulpix"
-          class="img-articulo"
-        />
-      </picture>
-      <div class="articulo-detalle">
-        <h3 class="articulo-detalle-titulo">POKEMON INDIGO
+      <div class="card-product__details">
+        <p class="card-product__licence">STAR WARS {{pageTitle}}</p>
+        <h3 class="card-product__name">BABY YODA BLUEBALL
         </h3>
-        <p class="articulo-detalle-descripcion">Atrapa todos los que puedas y
-          disfruta de una colección llena de amigos.</p>
-        <button class="btn-ver-coleccion">VER COLECCIÓN</button>
+        <p class="card-product__description">Figura coleccionable de Baby Yoda
+          (Grogu) - The Mandalorian Saga, edición limitada.</p>
+        <p class="card-product__price">$ 1799,99</p>
+        <div class="contenedor-agregar-item">
+          <div class="cont-cantidad">
+            <input
+              type="text"
+              name="quantity"
+              id="quantity"
+              class="span-cantidad-item"
+              value="0"
+            />
+            <div class="cont-botones-cantidad">
+              <button id="add" class="button-sumar-item">+</button>
+              <button id="subtract" class="button-restar-item">-</button>
+            </div>
+          </div>
+          <button class="button-agregar-item">Agregar al carrito</button>
+        </div>
+        <a class="link-pagos-item">
+          <u>Ver métodos de pago</u>
+          - 3 CUOTAS SIN INTERÉS</a>
       </div>
     </article>
-    <article class="articulo-seccion-colecciones">
-      <div class="articulo-detalle">
-        <h3 class="articulo-detalle-titulo">HARRY POTTER
-        </h3>
-        <p class="articulo-detalle-descripcion">
-          Revive los recuerdos de una saga llena de magia y encanto</p>
-        <button class="btn-ver-coleccion">VER COLECCIÓN</button>
-      </div>
-      <picture class="cont-img-articulo"><img
-          src="./assets/harry-potter/snape-patronus-1.webp"
-          alt="Snape patronus"
-          class="img-articulo"
-        />
-      </picture>
-    </article>
-
   </section>
-
   <section class="slider container glide">
-    <h2 class="slider__title titulo-seccion">últimos lazamientos</h2>
+    <h2 class="slider__title titulo-seccion">PRODUCTOS RELACIONADOS</h2>
     <div class="glide__track" data-glide-el="track">
       <ul class="slider__items glide__slides">
         <li class="slider__item glide__slide">
@@ -72,12 +52,12 @@
               <picture class="cont-img-card-producto">
                 <span class="card-producto__tag">Nuevo</span>
                 <img
-                  src="./assets/star-wars/trooper-1.webp"
+                  src="../assets/star-wars/trooper-1.webp"
                   alt="STORMTROOPER LIGHTSABER"
                   class="img-card-producto card-item__img--front"
                 />
                 <img
-                  src="./assets/star-wars/trooper-box.webp"
+                  src="../assets/star-wars/trooper-box.webp"
                   alt="STORMTROOPER LIGHTSABER BOX"
                   class="img-card-producto card-item__img--back"
                 />
@@ -96,12 +76,12 @@
               <picture class="cont-img-card-producto">
                 <span class="card-producto__tag">Nuevo</span>
                 <img
-                  src="./assets/pokemon/pidgeotto-1.webp"
+                  src="../assets/pokemon/pidgeotto-1.webp"
                   alt="PIDGEOTTO"
                   class="img-card-producto card-item__img--front"
                 />
                 <img
-                  src="./assets/pokemon/pidgeotto-box.webp"
+                  src="../assets/pokemon/pidgeotto-box.webp"
                   alt="PIDGEOTTO BOX"
                   class="img-card-producto card-item__img--back"
                 />
@@ -120,12 +100,12 @@
               <picture class="cont-img-card-producto">
                 <span class="card-producto__tag">Nuevo</span>
                 <img
-                  src="./assets/harry-potter/luna-1.webp"
+                  src="../assets/harry-potter/luna-1.webp"
                   alt="LUNA LOVEGOOD LION MASK"
                   class="img-card-producto card-item__img--front"
                 />
                 <img
-                  src="./assets/harry-potter/luna-box.webp"
+                  src="../assets/harry-potter/luna-box.webp"
                   alt="LUNA LOVEGOOD LION MASK BOX"
                   class="img-card-producto card-item__img--back"
                 />
@@ -153,9 +133,11 @@
     </div>
   </section>
 </main>
+
 <script
   src="https://cdn.jsdelivr.net/npm/iconify-icon@1.0.8/dist/iconify-icon.min.js"
 ></script>
 <script src="https://cdn.jsdelivr.net/npm/@glidejs/glide"></script>
-<script src="/js/glide.js"></script>
-<script src="app.js"></script>
+<script src="../js/glide.js"></script>
+<script src="../js/item.js"></script>
+<script src="../app.js"></script>
