Add footer and header on partials folder. Include header and footer on each page.

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,3 +1,4 @@
+{{> header}}
 <main class="main-home">
   <section class="banner">
     <article class="cont-nuevos-ingresos">
@@ -153,9 +154,10 @@
     </div>
   </section>
 </main>
+{{> footer}}
 <script
   src="https://cdn.jsdelivr.net/npm/iconify-icon@1.0.8/dist/iconify-icon.min.js"
 ></script>
 <script src="https://cdn.jsdelivr.net/npm/@glidejs/glide"></script>
 <script src="/js/glide.js"></script>
-<script src="app.js"></script>
+<script src="/app.js"></script>
