--- a/views/pages/cart.hbs
+++ b/views/pages/cart.hbs
@@ -1,3 +1,4 @@
+{{> header}}
 <main class="main-carrito">
   <h2 class="titulo-seccion titulo-carrito">CARRITO DE COMPRAS</h2>
   <div class="container cont-subtitulo-carrito">
@@ -88,3 +89,4 @@
     <a href="" class="link-pago">IR A PAGAR</a>
   </div>
 </main>
+{{> footer}}
