--- a/views/partials/footer.hbs
+++ b/views/partials/footer.hbs
@@ -1,13 +1,10 @@
 <footer class="footer">
   <nav class="navbar container navbar--footer">
     <ul class="navbar__menu--footer">
+      <li class="navbar__item"><a class="navbar-link" href="/shop">SHOP</a></li>
       <li class="navbar__item"><a
           class="navbar-link"
-          href="../pages/shop.html"
-        >SHOP</a></li>
-      <li class="navbar__item"><a
-          class="navbar-link"
-          href="../pages/login.html"
+          href="/auth/login"
         >INGRESAR</a></li>
       <li class="navbar__item"><a class="navbar-link" href="">CONTACTO</a></li>
     </ul>
