--- a/views/pages/login.hbs
+++ b/views/pages/login.hbs
@@ -1,3 +1,4 @@
+{{> header}}
 <main class="main-login">
   <h2 class="titulo-seccion titulo-login">INGRESAR A MI CUENTA</h2>
   <form action="" class="form-login-register">
@@ -34,3 +35,4 @@
   </form>
   <a href="" class="link-form">Olvidé mi cuenta</a>
 </main>
+{{> footer}}
