--- a/views/pages/shop.hbs
+++ b/views/pages/shop.hbs
@@ -1,3 +1,4 @@
+{{> header}}
 <div class="container body-shop">
   <aside class="aside-shop">
     <form action="" class="form-filtros-shop">
@@ -266,6 +267,7 @@
     </section>
   </main>
 </div>
+{{> footer}}
 <script
   src="https://cdn.jsdelivr.net/npm/iconify-icon@1.0.8/dist/iconify-icon.min.js"
 ></script>
