get data from bbdd

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -4,7 +4,7 @@
     <article class="cont-nuevos-ingresos">
 
       <h3 class="titulo-nuevos-ingresos">Nuevos Ingresos</h3>
-      <p>Descubrí el próximo Funko Pop de tu colección</p>
+      <p>Descubrí el próximo Funko Pop de tu colección{{data}} </p>
       <button
         class="link-shop"
         onclick="window.location.href='./pages/shop.html'"
