--- a/views/pages/item.hbs
+++ b/views/pages/item.hbs
@@ -14,7 +14,7 @@
         />
       </picture>
       <div class="card-product__details">
-        <p class="card-product__licence">STAR WARS {{pageTitle}}</p>
+        <p class="card-product__licence">STAR WARS</p>
         <h3 class="card-product__name">BABY YODA BLUEBALL
         </h3>
         <p class="card-product__description">Figura coleccionable de Baby Yoda
