Move views directory into src directory, rename public_home directory to public. Fix style errors.

--- a/src/views/partials/footer.hbs
+++ b/src/views/partials/footer.hbs
@@ -9,7 +9,7 @@
       <li class="navbar__item"><a class="navbar-link" href="">CONTACTO</a></li>
     </ul>
     <img
-      src="../assets/branding/isotype.svg"
+      src="/assets/branding/isotype.svg"
       alt="logo-funkoshop"
       class="logo-funkoshop-footer"
     />
