--- a/src/views/partials/header.hbs
+++ b/src/views/partials/header.hbs
@@ -3,7 +3,7 @@
   <nav class="navbar container">
     <picture><a href="/home">
         <img
-          src="../assets/branding/logo_light_horizontal.svg"
+          src="/assets/branding/logo_light_horizontal.svg"
           alt="Logo Funkoshop"
           class="logo"
         />
@@ -27,7 +27,7 @@
         >LOGIN</a></li>
       <li class="navbar__item">
         <a class="navbar__link-cart" href="/shop/cart"><img
-            src="../assets/icons/cart-icon.svg"
+            src="/assets/icons/cart-icon.svg"
             alt="Icono de carrito de compras"
           />
         </a>
