--- a/src/views/pages/item.hbs
+++ b/src/views/pages/item.hbs
@@ -1,14 +1,15 @@
+{{> header}}
 <main>
   <section class="container section-item">
     <article class="card-product">
       <picture class="card-product__cover-img">
         <img
-          src="../assets/star-wars/baby-yoda-1.webp"
+          src="/assets/star-wars/baby-yoda-1.webp"
           alt="Baby Yoda"
           class="card-item__img--front"
         />
         <img
-          src="../assets/star-wars/baby-yoda-box.webp"
+          src="/assets/star-wars/baby-yoda-box.webp"
           alt="Baby Yoda"
           class="card-item__img--back"
         />
@@ -52,12 +53,12 @@
               <picture class="cont-img-card-producto">
                 <span class="card-producto__tag">Nuevo</span>
                 <img
-                  src="../assets/star-wars/trooper-1.webp"
+                  src="/assets/star-wars/trooper-1.webp"
                   alt="STORMTROOPER LIGHTSABER"
                   class="img-card-producto card-item__img--front"
                 />
                 <img
-                  src="../assets/star-wars/trooper-box.webp"
+                  src="/assets/star-wars/trooper-box.webp"
                   alt="STORMTROOPER LIGHTSABER BOX"
                   class="img-card-producto card-item__img--back"
                 />
@@ -76,12 +77,12 @@
               <picture class="cont-img-card-producto">
                 <span class="card-producto__tag">Nuevo</span>
                 <img
-                  src="../assets/pokemon/pidgeotto-1.webp"
+                  src="/assets/pokemon/pidgeotto-1.webp"
                   alt="PIDGEOTTO"
                   class="img-card-producto card-item__img--front"
                 />
                 <img
-                  src="../assets/pokemon/pidgeotto-box.webp"
+                  src="/assets/pokemon/pidgeotto-box.webp"
                   alt="PIDGEOTTO BOX"
                   class="img-card-producto card-item__img--back"
                 />
@@ -100,12 +101,12 @@
               <picture class="cont-img-card-producto">
                 <span class="card-producto__tag">Nuevo</span>
                 <img
-                  src="../assets/harry-potter/luna-1.webp"
+                  src="/assets/harry-potter/luna-1.webp"
                   alt="LUNA LOVEGOOD LION MASK"
                   class="img-card-producto card-item__img--front"
                 />
                 <img
-                  src="../assets/harry-potter/luna-box.webp"
+                  src="/assets/harry-potter/luna-box.webp"
                   alt="LUNA LOVEGOOD LION MASK BOX"
                   class="img-card-producto card-item__img--back"
                 />
@@ -133,11 +134,11 @@
     </div>
   </section>
 </main>
+{{> footer}}
 
 <script
   src="https://cdn.jsdelivr.net/npm/iconify-icon@1.0.8/dist/iconify-icon.min.js"
 ></script>
 <script src="https://cdn.jsdelivr.net/npm/@glidejs/glide"></script>
-<script src="../js/glide.js"></script>
-<script src="../js/item.js"></script>
-<script src="../app.js"></script>
+<script src="/js/glide.js"></script>
+<script src="/js/item.js"></script>
